# GameEngine

./: .gitignore  .gitignore~  CMakeLists.txt  OpenGL_engine.sln  README.md
Dependencies/GLFW/src/: linux_joystick.h  nsgl_context.h  posix_thread.h
OpenGL_engine/: OpenGL_engine.vcxproj
OpenGL_engine/Debug/: application.obj.enc  vc142.idb
OpenGL_engine/Debug/OpenGL_engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL_engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenGL_engine/src/: Application.cpp
dependencies/GLFW/src/: cocoa_joystick.h  posix_time.h
dependencies/assimp/: Makefile  install_manifest.txt  revision.h
dependencies/assimp/code/: Makefile
dependencies/assimp/contrib/: Makefile
dependencies/assimp/contrib/irrXML/: Makefile
dependencies/assimp/test/: Makefile
dependencies/assimp/test/headercheck/: Makefile
dependencies/assimp/tools/assimp_cmd/: Makefile  assimp
dependencies/assimp/tools/assimp_qt_viewer/: Makefile
dependencies/assimp2/: Makefile  revision.h
dependencies/assimp2/code/: Makefile
dependencies/assimp2/contrib/: Makefile
dependencies/assimp2/contrib/irrXML/: Makefile
dependencies/assimp2/test/: Makefile
dependencies/assimp2/test/headercheck/: Makefile
dependencies/assimp2/tools/assimp_cmd/: Makefile  assimp
dependencies/assimp2/tools/assimp_qt_viewer/: Makefile
dependencies/glm/: CMakeLists.txt
dependencies/glm/detail/: type_quat.hpp
dependencies/glm/ext/: scalar_relational.inl  scalar_ulp.hpp  scalar_ulp.inl  vector_ulp.hpp
dependencies/glm/gtx/: hash.hpp  norm.hpp  quaternion.hpp
dependencies/stb_image/: stb_image.h
include/: Camera.h  DebugHelper.h  Game.h  GameObject.h  GameRender.h  GameScene.h  Game_MainGame.h  Game_SceneLight.h  Game_SceneModel.h  Mesh.h  Model.h  PrimitiveCube.h  Render.h  ResourceManager.h  SceneModel.h  SceneTest.h  Shader.h  SmartPointer.h  SpriteRenderer.h  Texture.h  WindowManager.h
include/Breakout/: Breakout.h  BreakoutLevel.h  BreakoutObject.h
res/models/sphere/: untitled.mtl
res/shaders/: AdvancedOpenGL.shader  Basic.shader  Cubemaps.shader  Lamp.shader  Light.shader  Model.shader  Shadow.shader  Skybox.shader  StencilTest.shader  basic.frag  basic.vert  light.frag  light.vert  model.vert
src/: main.cpp
src/camera/: Camera.cpp  Camera.h
src/engine/: DebugHelper.cpp  GameObject.cpp  GameRender.cpp  GameScene.cpp  Mesh.cpp  Model.cpp  PrimitiveCube.cpp  Render.cpp  ResourceManager.cpp  Shader.cpp  Texture.cpp  WindowManager.cpp
src/game/: Camera.cpp  Game.cpp  Game_MainGame.cpp  Game_SceneLight.cpp  Game_SceneModel.cpp  SceneModel.cpp  SceneTest.cpp
src/game/Breakout/: Breakout.cpp  BreakoutLevel.cpp  BreakoutObject.cpp  SpriteRenderer.cpp
src/key_handler/: keyHandler.cpp  keyHandler.h
src/mesh/: Mesh.cpp  Mesh.h
src/model/mesh/: Mesh.cpp  Mesh.h
src/model/model/: Model.cpp  Model.h
src/sceneObject/: Cube.cpp  Cube.h  Plane.cpp  Plane.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h
src/sceneObject/lights/: DirectLight.cpp  DirectLight.h  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/scenes/: portalScene.cpp  sceneFrameBuffer.cpp  sceneLight.cpp  sceneShadow.cpp  sceneSkyBox.cpp  sceneTest.cpp  scenes.cpp  scenes.h
src/shader/: Shader.cpp  Shader.h
src/shader_parser/: Shader.cpp  Shader.h
src/textures/: textures_util.cpp  textures_util.h
src/utils/: utils.cpp  utils.h
src/window_manager/: windowManager.cpp  windowManager.h
